Adjust email address

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h3>Contact details</h3>
     <p>
       Mobile: 0434 619 346<br>
-      Email: oliver at icloud dot com
+      Email: oligregg at icloud dot com
     </p>
   </footer>
 
