--- a/project9.html
+++ b/project9.html
@@ -7,11 +7,9 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@600&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
