--- a/index.html
+++ b/index.html
@@ -17,61 +17,62 @@
   </header>
   <main>
     <h2>About Oliver</h2>
+
     <div class="item">
       <img class="item-img" src="https://placehold.co/150x150" alt="">
       <p class="item-text">I'm Oliver Gregg, a prop maker and special effects artist studying at the National Institute of Dramatic Arts in Sydney. This website allows me to share my creations and the skills and techniques I've learned while making my props.</p>
     </div>
+
     <h2>Recent projects</h2>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project1.html">Semi-acoustic guitar build</a></h3>
-      <p class="item-text">For my industrial technology major work in high school I created a semi-acoustic electric guitar out of native Australian timbers. Throughout the creation of this project I used several woodworking techniques such as steam bending, kerfing and hollowing of timber.</p>
+      <img class="item-img" src="assets/img/zombie00.jpg" alt="">
+      <h3><a href="project1.html">Zombie Door</a></h3>
+      <p class="item-text">Zombie apocalypse-themed cupboard walls and doors, created with a mixture of plaster, shellac, paint and sand.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project2.html">Zombie Door</a></h3>
-      <p class="item-text">An early project was to replace the existing walls and door of a cupboard with zombie apocalypse themed panels and latches. The walls were created with a mixture of plaster, shellac, paint and sand.</p>
+      <img class="item-img" src="assets/img/knife00.jpg" alt="">
+      <h3><a href="project2.html">Aluminium hunting knife</a></h3>
+      <p class="item-text">A hunting knife prop created from 6mm aluminium, scrap wood,  and rope. The aluminium blade is polished and blunted for safety.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project3.html">Aluminium hunting knife</a></h3>
-      <p class="item-text">This hunting knife prop was created out of 6mm aluminium, scrap wood and rope. The aluminium blade was polished and blunted to avoid trouble.</p>
+      <img class="item-img" src="assets/img/aboriginal00.jpg" alt="">
+      <h3><a href="project3.html">Aboriginal spear and woomera (spear thrower)</a></h3>
+      <p class="item-text">An aboriginal spear and woomera created using only traditional methods. This involved sourcing materials, shaping and hand-carving the materials and using vine and bark mixed with spinifex resin to attach elements.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project4.html">Aboriginal spear and woomera (spear thrower)</a></h3>
-      <p class="item-text">For this project I aimed to create a aboriginal spear and woomera using only traditional methods, this involved me finding the materials myself, shaping and carving them by hand and using vine and bark mixed with spinifex resin to attach elements.</p>
+      <img class="item-img" src="assets/img/aztec00.png" alt="">
+      <h3><a href="project4.html">Aztec inspired fantasy weapons</a></h3>
+      <p class="item-text">An oversized macuahuitl out of foam, with black acrylic spikes and an accompanying acrylic sickle.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project5.html">Aztec inspired fantasy weapons</a></h3>
-      <p class="item-text">I created an incredibly oversized macuahuitl out of foam, with black acrylic spikes with an accompanying acrylic sickle.</p>
+      <img class="item-img" src="assets/img/self-portraite00.jpg" alt="">
+      <h3><a href="project5.html">Self-portrait</a></h3>
+      <p class="item-text">A large-scale self-portrait of myself in the art style of Deb Weir, created with simple acrylic paints and artline markers.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project6.html">Self portrait</a></h3>
-      <p class="item-text">A large scale self portrait of myself in the artstyle of Deb Weir, created with simple acrylic paints and artline markers</p>
+      <img class="item-img" src="assets/img/sculpture00.jpg" alt="">
+      <h3><a href="project6.html">Yara-ma-yha-who sculpture</a></h3>
+      <p class="item-text">A sculpture of the Aboriginal Australian creature recounted from the stories of David Unaipon. It uses a 3D-printed model coated with several layers of silicone paint to replicate skin texture.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project7.html">Yara-ma-yha-who sculpture</a></h3>
-      <p class="item-text">A sculpture I created of the Aboriginal Australian creature recounted from the stories of David Unaipon, created from a 3d printed 3d model I sculpted which was then coated with several layers of silicone paint to replicate skin texture.</p>
+      <img class="item-img" src="assets/img/toilet00.jpg" alt="">
+      <h3><a href="project7.html">Club toilet stall</a></h3>
+      <p class="item-text">A grotty and grimy toilet cubicle created entirely from MDF, brown paint and posca pens.</p>
     </div>
+
     <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project8.html">Club toilet stall</a></h3>
-      <p class="item-text">A grotty and grimy toilet cubicle created entirely (excluding the real toilet) from mdf, brown paint and posca pens.</p>
+      <img class="item-img" src="assets/img/chair00.jpg" alt="">
+      <h3><a href="project8.html">Welded steel Spider Chair</a></h3>
+      <p class="item-text">A spider-shaped black steel chair with red upholstering to represent a redback spider.</p>
     </div>
-    <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project9.html">Jojo’s Bizarre Adventure stone mask</a></h3>
-      <p class="item-text">A birthday present for my brother, a 3D modelled file then 3D printed and dry brushed with acrylic paints and splashed with a viscous red food dye/sugar mixup for the effect of fresh blood.</p>
-    </div>
-    <div class="item">
-      <img class="item-img" src="https://placehold.co/150x150" alt="">
-      <h3><a href="project1.html">Welded steel Spider Chair</a></h3>
-      <p class="item-text">Inspired by the build made by @deadly_chairs, I welded this steel chair in its entirety and painted it black before upholstering a nice little cushion for comfort. Yes, It can support the full weight of a person.</p>
-    </div>
+
   </main>
   <footer>
     <h4>Contact details</h4>
