--- a/project2.html
+++ b/project2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Zombie Door - Oliver Gregg: Prop maker</title>
+  <title>Aluminium hunting knife - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,42 @@
   </header>
   <main>
 
-    <h2>Zombie Door</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Aluminium hunting knife</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: Nida Introduction to Metal Working</li>
+        <li>Materials: Aluminium, timber, rope</li>
+      </ul>
+    </div>
+
+    <p>I started by cutting and sanding down the handle of my blade before applying an oil coat and re-sanding for the effect of aged timber.</p>
+
+    <p>I then cut out the shape of my blade from 6mm aluminium and created an opening slot for the blade to fit into the handle.</p>
+
+    <p>I then used a bench grinder and polishing wheel to grind the angles and polish the metal whilst also keeping it blunt. I then wrapped the handle with rope to secure the blade tightly.</p>
+
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/knife01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/knife02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/knife03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/knife04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/knife05.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
