--- a/project3.html
+++ b/project3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aluminium hunting knife - Oliver Gregg: Prop maker</title>
+  <title>Aboriginal spear and woomera (spear thrower) - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,50 @@
   </header>
   <main>
 
-    <h2>Aluminium hunting knife</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Aboriginal spear and woomera (spear thrower)</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: NIDA Cultural Artefact Project</li>
+        <li>Size: Spear length - 275cm, Woomera length - 60cm</li>
+        <li>Materials: Gymea lily, cypress pine, vine, bark</li>
+      </ul>
+    </div>
+
+    <p>For the spear, I collected the flower stem from the Gymea Lily and left it to dry out. I then carved off all the skin until it was narrow and balanced.</p>
+
+    <p>I then collected a fallen cypress pine log to hand-carve the spearhead. </p>
+
+    <p>I then attached the spearhead with vine, bark and melted spinifex resin.</p>
+
+    <p>With the remaining cypress pine, I carved the spear thrower with knives and chisels.</p>
+
+    <p>I then attached the sharp point and resin knot with more spinifex, bark and vine.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aboriginal01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aboriginal02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aboriginal03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aboriginal04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/aboriginal05.png" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/aboriginal06.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
