--- a/project4.html
+++ b/project4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aboriginal spear and woomera (spear thrower) - Oliver Gregg: Prop maker</title>
+  <title>Aztec inspired fantasy weapons - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,68 @@
   </header>
   <main>
 
-    <h2>Aboriginal spear and woomera (spear thrower)</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Aztec inspired fantasy weapons</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: Nida Fantasy Weapons</li>
+        <li>Size: Macuahuitl stands roughly 5 and a half feet tall.</li>
+        <li>Materials: Foamcore, plaster, timber, transparent acrylic sheet, flexicast, acrylic paint</li>
+      </ul>
+    </div>
+
+    <p>Four layers of foam were hot glued together, and a strip was removed from the centre to allow the wooden dowel to act as a handle and support.</p>
+
+    <p>The foam was coated with several layers of plaster, which were sanded down.</p>
+
+    <p>The obsidian shards were created from hand-carved transparent acrylic sheets,  then moulded and cast with flexicast and jet-black pigment.</p>
+
+    <p>The handle and hilt were painted with reflective gold spray paint. The body was dry-brushed with grey acrylic paint.</p>
+
+    <p>For the sickle, I started by glueing several layers of transparent acrylic sheet together and cutting the shape of the blade before carving into the plastic to create a jagged hand-carved look.</p>
+
+    <p>I then cut the handle out of plywood, painted it gold and wrapped it with leather.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aztec01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aztec02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aztec03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/aztec04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/aztec05.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/aztec06.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/aztec07.png" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/aztec08.png" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/aztec09.png" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/aztec10.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
