--- a/project5.html
+++ b/project5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aztec inspired fantasy weapons - Oliver Gregg: Prop maker</title>
+  <title>Self-portrait - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,23 @@
   </header>
   <main>
 
-    <h2>Aztec inspired fantasy weapons</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Self-portrait</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: NIDA Self-Portrait Project</li>
+        <li>Details: Inspired by the style of Deb Weir</li>
+        <li>Size: 150cm x 130 cm</li>
+        <li>Materials: Acrylic and markers on canvas</li>
+      </ul>
+    </div>
+
+    <p>Add something</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/self-portraite01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
-    <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
-    </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
-    <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
-    </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
-    <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
-    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
