--- a/project6.html
+++ b/project6.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Self portrait - Oliver Gregg: Prop maker</title>
+  <title>Yara-ma-yha-who sculpture - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,53 @@
   </header>
   <main>
 
-    <h2>Self portrait</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Yara-ma-yha-who sculpture</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: NIDA Sculptural Creatures Project</li>
+        <li>Materials: PLA filament, silicone paint, water-clear resin, plywood</li>
+      </ul>
+    </div>
+
+    <p>3D printed segments assembled with two-part epoxy resin and filled with Earls multifill.</p>
+
+    <p>Water-clear resin mixed with a yellow pigment was poured into a vacuum-formed semi-circle.</p>
+
+    <p>Silicone paint mixed with a red oxide pigment was applied with an airbrush in several layers with darker and lighter tones.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/sculpture01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/sculpture02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/sculpture03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/sculpture04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/sculpture05.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/sculpture07.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/sculpture08.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/sculpture09.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
