--- a/project7.html
+++ b/project7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Yara-ma-yha-who sculpture - Oliver Gregg: Prop maker</title>
+  <title>Club toilet stall - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,44 @@
   </header>
   <main>
 
-    <h2>Yara-ma-yha-who sculpture</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Club toilet stall</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: Toilet stall - Coronation of Poppea</li>
+        <li>Designed by: Rebecca Howarth</li>
+        <li>Materials: MDF, sourced toilet, shellac, watered-down brown and green acrylic paint, posca markers, sourced stickers</li>
+      </ul>
+    </div>
+
+    <p>I started by cutting roughly 150 50x50x10mm MDF tiles with a table saw.</p>
+
+    <p>The rough, worn-down toilet stall shape was created by smashing blunt tools against MDF sheets until it gave the desired effect; the tiles were then glued on.</p>
+
+    <p>After priming with white paint, the toilet stall and sourced toilet were painted with a watered-down green/brown acrylic paint. I used shellac and methylated spirits to separate the paints and give the desired mould effect.</p>
+
+    <p>Tags, symbols and anything anyone in the room could think of were then added to the walls and toilet with posca markers and stickers attached.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/toilet01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/toilet02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/toilet03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/toilet04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/toilet05.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
