--- a/project8.html
+++ b/project8.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Club toilet stall - Oliver Gregg: Prop maker</title>
+  <title>Welded steel Spider Chair - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,43 @@
   </header>
   <main>
 
-    <h2>Club toilet stall</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Welded steel Spider Chair</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: NIDA Furniture Replica Project</li>
+        <li>Design by: @deadly_chairs</li>
+        <li>Materials: Welded 25 x 25 x 1.6mm mild steel, upholstered in red velvet fabric.</li>
+      </ul>
+    </div>
+
+    <p>Several joints and angles were cut to make a single leg.</p>
+
+    <p>Attaching the first leg of the chair to the body frame</p>
+
+    <p>Fully assembled chair with armrests and fangs before paint and upholstery.</p>
+
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/chair01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/chair02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/chair03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/chair04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/chair05.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
