--- a/project1.html
+++ b/project1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Semi-acoustic guitar build - Oliver Gregg: Prop maker</title>
+  <title>Zombie Door - Oliver Gregg: Prop maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="assets/css/oliver.css" rel="stylesheet">
@@ -20,27 +20,59 @@
   </header>
   <main>
 
-    <h2>Semi-acoustic guitar build</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+    <h2>Zombie Door</h2>
+
+    <div class="item">
+      <ul>
+        <li>Project: Nida Intro to Scenic Construction</li>
+        <li>Size: 2 metres tall. </li>
+        <li>Materials: MDF, plaster, acrylic paint, sawdust, shellac, methylated spirits.</li>
+      </ul>
+    </div>
+
+    <p>I started by placing tape across an MDF sheet the size of the cupboard I was replacing the walls before spreading a thick layer of plaster mixed with my base coat brick colour.</p>
+
+    <p>I then removed the tape, which was aligned with the pattern of a brick wall.</p>
+    <p>After dry brushing my secondary colour onto the dried plaster, I added a second layer of plaster.</p>
+
+    <p>I then painted my second MDF sheet black as a basecoat and applied black paint and methylated spirits to separate the paint for a worn steel look. I then added shellac and crushed beetle wings for the effect of rust buildup.</p>
+
+    <p>I then mixed sawdust and green acrylic paint to create scenic lichen, which was thrown at my walls to appear as moss.</p>
+
+    <p>Finally, I created a red acrylic paint mixup for the effect of blood and smeared it across the panels.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/zombie01.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/zombie02.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/zombie03.jpg" alt="">
     </figure>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A aliquam mollitia nostrum et voluptate, sapiente praesentium sit necessitatibus iste, error modi dolorem placeat laborum soluta.</p>
+
     <figure>
-      <img class="item-img-large" src="https://placehold.co/600x600" alt="">
-      <figcaption>Caption</figcaption>
+      <img src="assets/img/zombie04.jpg" alt="">
     </figure>
+
+    <figure>
+      <img src="assets/img/zombie05.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/zombie06.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/zombie07.jpg" alt="">
+    </figure>
+
+    <figure>
+      <img src="assets/img/zombie08.jpg" alt="">
+    </figure>
+
   </main>
   <footer>
     <h4>Contact details</h4>
