--- a/project3.html
+++ b/project3.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Oliver Gregg: Prop maker</h1>
     <nav>
-      <a href="index.html">Home</a>      
+      <a class="button button-small" href="index.html">&laquo; Home</a>
     </nav>
   </header>
   <main>
