--- a/project2.html
+++ b/project2.html
@@ -37,23 +37,23 @@
 
 
     <figure>
-      <img src="assets/img/knife01.jpg" alt="">
+      <img src="assets/img/knife01.jpg" alt="Handle">
     </figure>
 
     <figure>
-      <img src="assets/img/knife02.jpg" alt="">
+      <img src="assets/img/knife02.jpg" alt="Adding a dummy blade">
     </figure>
 
     <figure>
-      <img src="assets/img/knife03.jpg" alt="">
+      <img src="assets/img/knife03.jpg" alt="Assembled blade on workbench">
     </figure>
 
     <figure>
-      <img src="assets/img/knife04.jpg" alt="">
+      <img src="assets/img/knife04.jpg" alt="Front view of finished knife">
     </figure>
 
     <figure>
-      <img src="assets/img/knife05.jpg" alt="">
+      <img src="assets/img/knife05.jpg" alt="Rear vide of finished knife">
     </figure>
 
   </main>
