--- a/project3.html
+++ b/project3.html
@@ -41,27 +41,27 @@
     <p>I then attached the sharp point and resin knot with more spinifex, bark and vine.</p>
 
     <figure>
-      <img src="assets/img/aboriginal01.jpg" alt="">
+      <img src="assets/img/aboriginal01.jpg" alt="Shaping the spear">
     </figure>
 
     <figure>
-      <img src="assets/img/aboriginal02.jpg" alt="">
+      <img src="assets/img/aboriginal02.jpg" alt="Attaching the spear head">
     </figure>
 
     <figure>
-      <img src="assets/img/aboriginal03.jpg" alt="">
+      <img src="assets/img/aboriginal03.jpg" alt="Close-up of the back of the woomera">
     </figure>
 
     <figure>
-      <img src="assets/img/aboriginal04.jpg" alt="">
+      <img src="assets/img/aboriginal04.jpg" alt="Close of of the woomera spear attachment">
     </figure>
 
     <figure>
-      <img src="assets/img/aboriginal05.png" alt="">
+      <img src="assets/img/aboriginal05.png" alt="Finished woomera">
     </figure>
 
     <figure>
-      <img src="assets/img/aboriginal06.jpg" alt="">
+      <img src="assets/img/aboriginal06.jpg" alt="Spear and woomera on display">
     </figure>
 
   </main>
