--- a/project4.html
+++ b/project4.html
@@ -43,39 +43,39 @@
     <p>I then cut the handle out of plywood, painted it gold and wrapped it with leather.</p>
 
     <figure>
-      <img src="assets/img/aztec01.jpg" alt="">
+      <img src="assets/img/aztec01.jpg" alt="Creating the club handle">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec02.jpg" alt="">
+      <img src="assets/img/aztec02.jpg" alt="Creating the club head">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec03.jpg" alt="">
+      <img src="assets/img/aztec03.jpg" alt="Detail of club spikes">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec04.jpg" alt="">
+      <img src="assets/img/aztec04.jpg" alt="Detail of gold handle">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec05.jpg" alt="">
+      <img src="assets/img/aztec05.jpg" alt="Beginning of the angled sword">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec06.jpg" alt="">
+      <img src="assets/img/aztec06.jpg" alt="Finished angled sword">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec07.png" alt="">
+      <img src="assets/img/aztec07.png" alt="Finished club">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec08.png" alt="">
+      <img src="assets/img/aztec08.png" alt="Finished club and angled sword">
     </figure>
 
     <figure>
-      <img src="assets/img/aztec09.png" alt="">
+      <img src="assets/img/aztec09.png" alt="Final display">
     </figure>
 
     <figure>
