--- a/project5.html
+++ b/project5.html
@@ -34,7 +34,7 @@
     <p>Add something</p>
 
     <figure>
-      <img src="assets/img/self-portraite01.jpg" alt="">
+      <img src="assets/img/self-portraite01.jpg" alt="Self-portrait">
     </figure>
 
   </main>
