--- a/project6.html
+++ b/project6.html
@@ -36,35 +36,35 @@
     <p>Silicone paint mixed with a red oxide pigment was applied with an airbrush in several layers with darker and lighter tones.</p>
 
     <figure>
-      <img src="assets/img/sculpture01.jpg" alt="">
+      <img src="assets/img/sculpture01.jpg" alt="Initial cast of sculpture">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture02.jpg" alt="">
+      <img src="assets/img/sculpture02.jpg" alt="Detail of sculpture face">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture03.jpg" alt="">
+      <img src="assets/img/sculpture03.jpg" alt="Painted sculpture">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture04.jpg" alt="">
+      <img src="assets/img/sculpture04.jpg" alt="Finished sculpture - right side view">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture05.jpg" alt="">
+      <img src="assets/img/sculpture05.jpg" alt="Finished sculpture - left side view">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture07.jpg" alt="">
+      <img src="assets/img/sculpture07.jpg" alt="Finished sculpture - front view">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture08.jpg" alt="">
+      <img src="assets/img/sculpture08.jpg" alt="Finished sculpture - front view with theatrical lighting">
     </figure>
 
     <figure>
-      <img src="assets/img/sculpture09.jpg" alt="">
+      <img src="assets/img/sculpture09.jpg" alt="Finished sculpture - close up of head">
     </figure>
 
   </main>
