--- a/project7.html
+++ b/project7.html
@@ -39,23 +39,23 @@
     <p>Tags, symbols and anything anyone in the room could think of were then added to the walls and toilet with posca markers and stickers attached.</p>
 
     <figure>
-      <img src="assets/img/toilet01.jpg" alt="">
+      <img src="assets/img/toilet01.jpg" alt="Creating the initial tiles">
     </figure>
 
     <figure>
-      <img src="assets/img/toilet02.jpg" alt="">
+      <img src="assets/img/toilet02.jpg" alt="Assembling the walls">
     </figure>
 
     <figure>
-      <img src="assets/img/toilet03.jpg" alt="">
+      <img src="assets/img/toilet03.jpg" alt="Finished distressing the display">
     </figure>
 
     <figure>
-      <img src="assets/img/toilet04.jpg" alt="">
+      <img src="assets/img/toilet04.jpg" alt="Adding graffiti - front view">
     </figure>
 
     <figure>
-      <img src="assets/img/toilet05.jpg" alt="">
+      <img src="assets/img/toilet05.jpg" alt="Adding graffiti - side view">
     </figure>
 
   </main>
