--- a/project8.html
+++ b/project8.html
@@ -38,23 +38,23 @@
 
 
     <figure>
-      <img src="assets/img/chair01.jpg" alt="">
+      <img src="assets/img/chair01.jpg" alt="Initial leg frame">
     </figure>
 
     <figure>
-      <img src="assets/img/chair02.jpg" alt="">
+      <img src="assets/img/chair02.jpg" alt="Another veiw of leg frame">
     </figure>
 
     <figure>
-      <img src="assets/img/chair03.jpg" alt="">
+      <img src="assets/img/chair03.jpg" alt="Welded legs">
     </figure>
 
     <figure>
-      <img src="assets/img/chair04.jpg" alt="">
+      <img src="assets/img/chair04.jpg" alt="Detail of upholsted cushion">
     </figure>
 
     <figure>
-      <img src="assets/img/chair05.jpg" alt="">
+      <img src="assets/img/chair05.jpg" alt="Finished chair">
     </figure>
 
   </main>
