--- a/project1.html
+++ b/project1.html
@@ -42,31 +42,31 @@
     <p>Finally, I created a red acrylic paint mixup for the effect of blood and smeared it across the panels.</p>
 
     <figure>
-      <img src="assets/img/zombie01.jpg" alt="">
+      <img src="assets/img/zombie01.jpg" alt="Initial distressed paint">
     </figure>
 
     <figure>
-      <img src="assets/img/zombie02.jpg" alt="">
+      <img src="assets/img/zombie02.jpg" alt="Adding fake brick lines">
     </figure>
 
     <figure>
-      <img src="assets/img/zombie03.jpg" alt="">
+      <img src="assets/img/zombie03.jpg" alt="Adding wear to bricks">
     </figure>
 
     <figure>
-      <img src="assets/img/zombie04.jpg" alt="">
+      <img src="assets/img/zombie04.jpg" alt="Distressed side panel">
     </figure>
 
     <figure>
-      <img src="assets/img/zombie05.jpg" alt="">
+      <img src="assets/img/zombie05.jpg" alt="Two panels joined">
     </figure>
 
     <figure>
-      <img src="assets/img/zombie06.jpg" alt="">
+      <img src="assets/img/zombie06.jpg" alt="Installed panels - front view">
     </figure>
 
     <figure>
-      <img src="assets/img/zombie07.jpg" alt="">
+      <img src="assets/img/zombie07.jpg" alt="Installed panels - side view">
     </figure>
 
     <figure>
